...
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:scaleType="centerInside"
            app:imgUrl="@{movie.poster_path}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtTitleMovie"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/description_img_movie" />

        <TextView
            android:id="@+id/txtTitleMovie"
            android:layout_width="0dp"
...
